bug fix in left-Side-Wrap and added styling to header

--- a/src/style.scss
+++ b/src/style.scss
@@ -23,12 +23,15 @@ body {
   .left-Side-Wrap {
     height: 100%;
     width: 50%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 
     .navbrand-Wrap {
       padding: 0;
       width: 50%;
       height: 100%;
-      margin-left: 8rem;
       display: flex;
       flex-direction: row;
       text-align: center;
@@ -486,5 +489,20 @@ body {
         }
       }
     }
+  }
+}
+// header
+.header {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+
+  .head {
+    height: 85%;
+    width: 75%;
   }
 }
